<resources>

    <string name="app_name">Indigo Automation</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="door1">Garage Door 1</string>
    <string name="door2">Garage Door 2</string>
    
    <string name="light1">Garage Light 1</string>
    <string name="light2">Garage Light 2</string>
    
    <string name="open">open</string>
    <string name="close">close</string>
    
    <string name="line">---------------------------</string>
    
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="gray">#e0e0e0</color>
    <string name="blank"/>
    <string name="Setup">Setup</string>
    <string name="Options">Options</string>
    <string-array name="wLanOptions">
         <item>Open</item>
         <item>WEP-128</item>
         <item>WPA1</item>
         <item>Mixed WPA1/WPA2-PSK</item>
         <item>WPA2-PSK</item>
         <item>WPE-64</item>         
    </string-array>

    <string-array name="providers">
         <item>ATT</item>
         <item>Sprint</item>
         <item>TMobile</item>
         <item>Cricket</item>
         <item>Verizon</item>
    </string-array>
    <string name="SampleIP">192.168.2.175</string>
    <string name="SampleTime">3600</string>
    <string name="SamplePhone">5121234567</string>
    <string name="SampleSSID">YourSSID</string>
    <string name="AuthenticationType">Authentication Type</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="ModuleIP">Module IP</string>
    <string name="Telephone">Telephone</string>
    <string name="TextMeTimer">Text Me Timer</string>
    <string name="SamplePassword">******</string>
    <string name="WifiSsid">WIFI SSID</string>
    <string name="Provider">Provider</string>
    <string name="WifiPassword">WIFI Password</string>
    <string name="back">back</string>
    <string name="ModulePort">Module Port</string>
    <string name="SamplePort">20000</string>
    <string name="light">light</string>
    
    
</resources>