<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent" >

<RelativeLayout 
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:contentDescription="@string/door1"
    android:gravity="center|top"
    android:paddingTop="25dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/AuthenticationType"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/authType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/textView1"
        android:entries="@array/wLanOptions"
        android:minWidth="160dp" 
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="25dp"
        android:text="@string/WifiSsid"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/wifiSsid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/authType"
        android:layout_below="@+id/authType"
        android:ems="10"
        android:maxLength="16"
        android:inputType="text"
        android:text="@string/SampleSSID"
        android:width="160dp" >
        
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/wifiSsid"
        android:layout_marginTop="32dp"
        
        android:text="@string/WifiPassword"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/wifiPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/wifiSsid"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="16"
        android:text="@string/SamplePassword"
        android:width="160dp" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="50dp"
        android:text="@string/Cancel" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/CancelButton"
        android:layout_alignBottom="@+id/CancelButton"
        android:layout_alignRight="@+id/wifiPassword"
        android:text="@string/Save" />

</RelativeLayout>
</ScrollView>

