<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:gravity="center|top"
    android:paddingTop="25dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/door1"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:src="@drawable/garage_closed" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/door1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ToggleButton
        android:id="@+id/door1Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/textView1"
        android:textOff="@string/close"
        android:textOn="@string/open" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/light1"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:src="@drawable/light_on" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/light1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/lightButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/door1Toggle"
        android:minWidth="60dp"
        android:text="@string/light" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/door2"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:src="@drawable/garage_closed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/door2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ToggleButton
        android:id="@+id/door2Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/lightButton1"
        android:textOff="@string/close"
        android:textOn="@string/open" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/light2"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:src="@drawable/light_on" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/light2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/lightButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/door2Toggle"
        android:minWidth="60dp"
        android:text="@string/light" />

    <Button
        android:id="@+id/SetupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="50dp"
        android:text="@string/Setup" />

    <Button
        android:id="@+id/OptionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lightButton2"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="50dp"
        android:text="@string/Options" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/OptionsButton"
        android:layout_below="@+id/OptionsButton"
        android:layout_marginTop="56dp" />
            
</RelativeLayout>

</ScrollView>